Fixing mobile layout and overflows

--- a/JobScraper.Web/wwwroot/app.css
+++ b/JobScraper.Web/wwwroot/app.css
@@ -13,11 +13,12 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
     padding-top: 1.1rem;
+    padding-bottom: 70px;
 }
 
 h1:focus {
@@ -42,9 +43,9 @@ h1:focus {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
 
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
@@ -60,7 +61,8 @@ h1:focus {
 }
 
 .col-header-content {
-    display: flex; !important;
+    display: flex;
+!important;
     flex-direction: column;
 }
 
@@ -86,7 +88,16 @@ th {
 }
 
 #table-container {
-    min-height: 80vh;
+    max-height: calc(100vh - 120px);
+    margin-bottom: 50px;
+    overflow: auto;
+}
+
+@media (max-width: 640.98px) {
+    #table-container {
+        max-height: none;
+        overflow-y: visible;
+    }
 }
 
 .text-truncate {
@@ -99,13 +110,20 @@ th {
     position: fixed;
     left: 250px;
     bottom: 0;
-    width: calc(100% - 250px - 1.5rem);
+    width: calc(100% - 250px - 2.4rem);
     background-color: var(--bs-body-bg);
     padding-left: 2rem !important;
     height: 50px;
+    z-index: 1000;
+}
+
+@media (max-width: 640.98px) {
+    .footer {
+        left: 0;
+        width: 100%;
+    }
 }
 
 article {
-    height: calc(100% - 103px);
-
+    height: 100%;
 }
